Refactored App endpoints
